--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "less-middleware": "*",
     "ntwitter": "~0.5.0",
     "express-resource": "~1.0.0",
-    "config": "~0.4.18"
+    "config": "~0.4.18",
+    "underscore": "~1.4.3"
   },
   "jam": {
     "packageDir": "public/js/vendor",
