--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "ntwitter": "~0.5.0",
     "express-resource": "~1.0.0",
     "config": "~0.4.18",
-    "underscore": "~1.4.3"
+    "underscore": "~1.4.3",
+    "mongojs": "~0.5.1"
   },
   "jam": {
     "packageDir": "public/js/vendor",
